Update: requirements.txt & ch06_updated_class.ipynb

--- a/ch06_updated_class.ipynb
+++ b/ch06_updated_class.ipynb
@@ -19,7 +19,8 @@
     "import matplotlib.pyplot as plt\n",
     "plt.rc(\"figure\", figsize=(10, 6))\n",
     "pd.options.display.max_colwidth = 75\n",
-    "pd.options.display.max_columns = 10\n",
+    "pd.options.display.max_columns = 20\n",
+    "pd.options.display.max_rows = 10\n",
     "np.set_printoptions(precision=4, suppress=True)\n",
     "plt.rcParams[\"font.family\"] = 'Malgun Gothic'"
    ]
