--- a/ch05_update_class.ipynb
+++ b/ch05_update_class.ipynb
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -804,11 +804,9 @@
     }
    ],
    "source": [
-    "# obj4의 데이터에 1000을 더하여 새로운 Series 객체를 생성합니다.\n",
     "obj4_plus_1000 = obj4 + 1000\n",
     "\n",
-    "# 새로운 Series 객체를 출력합니다.\n",
-    "print(obj4_plus_1000)\n"
+    "print(obj4_plus_1000)"
    ]
   },
   {
@@ -880,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +891,6 @@
     }
    ],
    "source": [
-    "# sample 데이터에 90과 89가 있는지 확인\n",
     "is_90_exist = 90 in sample.values\n",
     "is_89_exist = 89 in sample.values\n",
     "\n",
