--- a/ch06_updated_class.ipynb
+++ b/ch06_updated_class.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6장 데이터 로딩과 저장, 파일 형식"
+    "# 6장 데이터 로딩과 저장, 파일 형식 (내꺼) "
    ]
   },
   {
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import numpy as \n",
     "import pandas as pd\n",
     "np.random.seed(12345)\n",
     "import matplotlib.pyplot as plt\n",
